<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >
    <TextView
        android:id="@+id/txtTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="Lucida Console"
        android:text="@string/txtTitleLabelId"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtTitleLabel"
        android:layout_alignLeft="@+id/edtPublisher"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@id/txtTitleLabel"
        android:background="@drawable/edittext_shape"
        android:fontFamily="Lucida Console"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edtTitle"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_dark" />
    <TextView
        android:id="@+id/txtAuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtTitleLabel"
        android:layout_below="@id/line1"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="Lucida Console"
        android:text="@string/txtAuthorLabelId"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtAuthorLabel"
        android:layout_alignLeft="@id/edtPublisher"
        android:layout_below="@id/line1"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txtAuthorLabel"
        android:background="@drawable/edittext_shape"
        android:fontFamily="Lucida Console"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edtAuthor"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_dark" />
    <TextView
        android:id="@+id/txtPublisherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtTitleLabel"
        android:layout_below="@id/line2"
        android:layout_marginTop="15dp"
        android:fontFamily="Lucida Console"
        android:text="@string/txtPublisherLabelId"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <EditText
        android:id="@id/edtPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtPublisherLabel"
        android:layout_below="@id/line2"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txtPublisherLabel"
        android:background="@drawable/edittext_shape"
        android:fontFamily="Lucida Console"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edtPublisher"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_dark" />
    <TextView
        android:id="@+id/txtCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtTitleLabel"
        android:layout_below="@id/line3"
        android:layout_marginTop="15dp"
        android:fontFamily="Lucida Console"
        android:text="@string/txtCategoryLabelId"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edtCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtCategoryLabel"
        android:layout_alignLeft="@id/edtPublisher"
        android:layout_below="@id/line3"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txtCategoryLabel"
        android:background="@drawable/edittext_shape"
        android:fontFamily="Lucida Console"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/edtCategory"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_blue_dark" />
    <TextView
        android:id="@+id/txtPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtTitleLabel"
        android:layout_below="@id/line4"
        android:layout_marginTop="15dp"
        android:fontFamily="Lucida Console"
        android:text="@string/txtPriceLabelId"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtPriceLabel"
        android:layout_alignLeft="@id/edtPublisher"
        android:layout_below="@id/line4"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/txtPriceLabel"
        android:background="@drawable/edittext_shape"
        android:fontFamily="Lucida Console"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <ImageView
        android:id="@+id/imgAddBook"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_alignRight="@id/edtAuthor"
        android:layout_below="@id/edtPrice"
        android:layout_marginTop="5dp"
        android:src="@android:drawable/ic_menu_camera"
        android:scaleType="fitXY" />
    <TextView
        android:id="@+id/txtDescribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imgAddBook"
        android:layout_alignLeft="@id/txtTitleLabel"
        android:layout_toLeftOf="@id/imgAddBook"
        android:fontFamily="Lucida Console"
        android:text="@string/txtDescribeLabelId"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/edtDescribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtAuthorLabel"
        android:layout_alignRight="@id/edtAuthor"
        android:layout_below="@id/txtDescribe"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_shape"
        android:fontFamily="Lucida Console"
        android:lines="3"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
    <View
        android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/strut"
        android:background="@drawable/button_shape"
        android:fontFamily="Arial"
        android:text="@string/btnDoneId"
        android:textColor="#1D7D84"
        android:textSize="16sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnCancle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@id/strut"
        android:background="@drawable/button_shape"
        android:fontFamily="Arial"
        android:text="@string/btnCancelId"
        android:textColor="#1D7D84"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>